# assistant

./: .env  Cargo.toml  Rocket.toml  docker-compose.yml
migrations/2023-07-15-001443_create_users_table/: up.sql
migrations/2023-07-15-162149_create_tasks_table/: up.sql
migrations/2023-07-16-144334_create_roles_table/: up.sql
migrations/2023-07-16-144351_create_roles_users_table/: up.sql
migrations/2023-07-16-144527_create_credentials_table/: down.sql  up.sql
src/: authorisation.rs  authorization.rs  lib.rs  main.rs  schema.rs
src/authorisation/basic_auth/: mod.rs
src/authorization/: authorization_controller.rs  authorization_service.rs
src/authorization/basic_auth/: mod.rs
src/framework/: commands.rs  mod.rs  router_helpers.rs
src/tasks/: mod.rs  task.rs  tasks_controller.rs
src/tasks/tasks_repository/: mod.rs
src/users/: credentials.rs  mod.rs  role.rs  user.rs
src/users/identity_repository/: mod.rs
src/users/identity_service/: mod.rs
src/users/repositories/: mod.rs
src/users/role_service/: mod.rs
src/users/value_objects/: mod.rs
tests/: tasks.rs
