[package]
name = "tasks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.*"
uuid = { version = "1.4.0", features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
base64 = "0.21.2"
regex = "1.8.4"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_postgres_pool"] }
chrono = { version = "0.4.26", features = ["serde"] }
log = "0.4.19"
diesel_migrations = "2.1.0"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
